# mf2

./: .coveragerc  .coveralls.yml  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  changelog.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  function-suggestion.md
.github/workflows/: build_publish_pypi.yml  tests.yml
JOSS-paper/: paper.bib  paper.md  scalability-comparison.py
docs/scripts/: example-usage.py  mytiming.m  scalability-comparison.py  test_function_output.m  test_function_performance.m  time_scaling_matlab.csv
docs/source/: conf.py  example-usage.rst  examples.rst  getting-started.rst  index.rst  install.rst  mf2.bohachevsky.rst  mf2.booth.rst  mf2.borehole.rst  mf2.branin.rst  mf2.currin.rst  mf2.forrester.rst  mf2.hartmann.rst  mf2.himmelblau.rst  mf2.multiFidelityFunction.rst  mf2.park91a.rst  mf2.park91b.rst  mf2.rst  mf2.six_hump_camelback.rst  multifidelityfunctions.bohachevsky.rst  multifidelityfunctions.booth.rst  multifidelityfunctions.borehole.rst  multifidelityfunctions.branin.rst  multifidelityfunctions.currin.rst  multifidelityfunctions.forrester.rst  multifidelityfunctions.hartmann.rst  multifidelityfunctions.himmelblau.rst  multifidelityfunctions.multiFidelityFunction.rst  multifidelityfunctions.park91a.rst  multifidelityfunctions.park91b.rst  multifidelityfunctions.rst  multifidelityfunctions.six_hump_camelback.rst  performance.rst
mf2/: VERSION  __init__.py  bohachevsky.py  booth.py  borehole.py  branin.py  currin.py  forrester.py  hartmann.py  himmelblau.py  himmelblau_seb.py  multiFidelityFunction.py  multi_fidelity_function.py  park91a.py  park91b.py  six_hump_camelback.py
mf2/adjustable/: __init__.py  branin.py  hartmann.py  paciorek.py  trid.py
multi-fidelity-functions/: BR.py  HM.py  __init__.py
multifidelityfunctions/: BC.py  BR.py  BT.py  FR.py  HM.py  HMseb.py  Hartmann.py  OD.py  SC.py  __init__.py  artificialMultifidelity.py  bohachevsky.py  booth.py  borehole.py  branin.py  curretal88exp.py  currin.py  forrester.py  hartmann.py  himmelblau.py  himmelblau_seb.py  mff_test.py  multiFidelityFunction.py  paciorek.py  park91a.py  park91b.py  six_hump_camelback.py  trid.py
multifidelityfunctions/adjustable/: __init__.py  branin.py  hartmann.py  paciorek.py  trid.py
tests/: __init__.py  create_regression_data.py  multiFidelityFunction_test.py  property_test.py  regression_test.py  utils.py
tests/regression_files/: input_10d.npy  input_1d.npy  input_2d.npy  (+45 more)
(+45 files in other folders)
